[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = "A basic fastapi project where a single endpoint returns some dummy data."
authors = ["Cameron Harries <37667284+cameronharries@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.3"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
